samples/_failures_safe/1761729384_d8b624_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff5f8aed.c: In function ‘main’:
./samples/SAFE/__tmp_ff5f8aed.c:152:43: error: missing terminating " character
  152 |                     print_matrix(&result, "
      |                                           ^
./samples/SAFE/__tmp_ff5f8aed.c:152:21: error: expected expression at end of input
  152 |                     print_matrix(&result, "
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ff5f8aed.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff5f8aed.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff5f8aed.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff5f8aed.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff5f8aed.c:152:21: error: expected declaration or statement at end of input
